[gd_scene load_steps=10 format=3 uid="uid://da2inu5f375o1"]

[ext_resource type="Texture2D" uid="uid://b3dlhtuovebqx" path="res://scenes/minigames_select/bgselect.jpg" id="1_17x8c"]
[ext_resource type="Script" uid="uid://bh4g53jcwar8o" path="res://scenes/minigames_select/selection_screen.gd" id="1_p5tvq"]
[ext_resource type="Texture2D" uid="uid://c0l2mbd7cwxvo" path="res://scenes/minigames_select/gameframe.png" id="2_r0fal"]
[ext_resource type="Texture2D" uid="uid://cv3b3egwsy8d6" path="res://tug_of_war/tuggame.png" id="3_odtya"]
[ext_resource type="FontFile" uid="uid://c7ltpxfxcqx6d" path="res://tug_of_war/Minecraft.ttf" id="4_dwwh8"]
[ext_resource type="Texture2D" uid="uid://rs2co3yumx8j" path="res://scenes/minigames_select/skyteminigame.png" id="5_dwwh8"]
[ext_resource type="Texture2D" uid="uid://kc8qt38mwexa" path="res://scenes/minigames_select/hangman.png" id="7_addkp"]
[ext_resource type="Texture2D" uid="uid://de37dj0o7oiwg" path="res://scenes/minigames_select/presentrun.png" id="8_lj4qc"]
[ext_resource type="Texture2D" uid="uid://b2c268b1jtlp" path="res://scenes/minigames_select/snowmanspill.png" id="9_x5ode"]

[node name="SelectionScreen" type="Control"]
modulate = Color(0.8474744, 0.84747446, 0.84747446, 1)
layout_mode = 3
anchors_preset = 0
offset_left = 300.0
offset_top = 73.0
offset_right = 1313.0
offset_bottom = 613.0
script = ExtResource("1_p5tvq")

[node name="TextureRect6" type="TextureRect" parent="."]
modulate = Color(0.5529556, 0.55295557, 0.55295557, 1)
layout_mode = 0
offset_left = 7.0
offset_right = 1007.0
offset_bottom = 541.0
texture = ExtResource("1_17x8c")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(500, 271)
scale = Vector2(210.35146, 68.235344)
zoom = Vector2(2, 2)

[node name="TextureRect7" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 101.0
offset_right = 251.0
offset_bottom = 203.0
texture = ExtResource("3_odtya")
expand_mode = 1

[node name="TextureRect6" type="TextureButton" parent="TextureRect7"]
layout_mode = 0
offset_left = -46.0
offset_top = -41.0
offset_right = 219.0
offset_bottom = 151.0
texture_normal = ExtResource("2_r0fal")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="TextureRect7"]
layout_mode = 0
offset_left = -10.0
offset_top = -53.0
offset_right = 130.0
offset_bottom = -22.0
theme_override_fonts/font = ExtResource("4_dwwh8")
theme_override_font_sizes/font_size = 22
text = "Tug of War"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 441.0
offset_top = 109.0
offset_right = 571.0
offset_bottom = 206.0
texture = ExtResource("5_dwwh8")
expand_mode = 1

[node name="TextureRect2" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = -35.0
offset_top = -48.0
offset_right = 230.0
offset_bottom = 144.0
texture_normal = ExtResource("2_r0fal")
ignore_texture_size = true
stretch_mode = 4

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = -11.0
offset_top = -59.0
offset_right = 134.0
offset_bottom = -28.0
theme_override_fonts/font = ExtResource("4_dwwh8")
theme_override_font_sizes/font_size = 22
text = "Hit The Game"

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 713.0
offset_top = 89.0
offset_right = 858.0
offset_bottom = 209.0
texture = ExtResource("7_addkp")
expand_mode = 1

[node name="TextureRect3" type="TextureButton" parent="TextureRect3"]
layout_mode = 0
offset_left = -24.0
offset_top = -31.0
offset_right = 241.0
offset_bottom = 161.0
texture_normal = ExtResource("2_r0fal")
ignore_texture_size = true
stretch_mode = 4

[node name="Label2" type="Label" parent="TextureRect3"]
layout_mode = 0
offset_left = 24.0
offset_top = -41.0
offset_right = 169.0
offset_bottom = -10.0
theme_override_fonts/font = ExtResource("4_dwwh8")
theme_override_font_sizes/font_size = 22
text = "Hangman"

[node name="TextureRect5" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 612.0
offset_top = 342.0
offset_right = 744.0
offset_bottom = 472.0
texture = ExtResource("8_lj4qc")
expand_mode = 1

[node name="TextureRect4" type="TextureButton" parent="TextureRect5"]
layout_mode = 0
offset_left = -30.0
offset_top = -36.0
offset_right = 235.0
offset_bottom = 156.0
texture_normal = ExtResource("2_r0fal")
ignore_texture_size = true
stretch_mode = 4

[node name="Label3" type="Label" parent="TextureRect5"]
layout_mode = 0
offset_left = -354.0
offset_top = -45.0
offset_right = -209.0
offset_bottom = -14.0
theme_override_fonts/font = ExtResource("4_dwwh8")
theme_override_font_sizes/font_size = 22
text = "build a snowman"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 265.0
offset_top = 353.0
offset_right = 381.0
offset_bottom = 449.0
texture = ExtResource("9_x5ode")
expand_mode = 1

[node name="TextureRect5" type="TextureButton" parent="TextureRect2"]
layout_mode = 0
offset_left = -42.0
offset_top = -48.0
offset_right = 223.0
offset_bottom = 144.0
texture_normal = ExtResource("2_r0fal")
ignore_texture_size = true
stretch_mode = 4

[node name="Label2" type="Label" parent="TextureRect2"]
layout_mode = 0
offset_left = 350.0
offset_top = -56.0
offset_right = 495.0
offset_bottom = -25.0
theme_override_fonts/font = ExtResource("4_dwwh8")
theme_override_font_sizes/font_size = 22
text = "Present Run"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="gui_input" from="TextureRect7/TextureRect6" to="." method="tug_of_war"]
[connection signal="gui_input" from="TextureRect/TextureRect2" to="." method="shoot_game"]
[connection signal="gui_input" from="TextureRect3/TextureRect3" to="." method="hangman"]
[connection signal="gui_input" from="TextureRect5/TextureRect4" to="." method="grinch_run"]
[connection signal="gui_input" from="TextureRect2/TextureRect5" to="." method="diona_spill"]
